--- a/index.html
+++ b/index.html
@@ -9,49 +9,10 @@
 	<meta name="keywords" content="физика, классическая, квантовая">
 	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
 	<title>Классическая физика или квантовая?</title>
-	<link rel="icon" href="/img/favicon.svg" sizes="any" type="image/svg+xml">
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="stylesheet" href="/css/media.css">
-
-	<!-- Google Analytics counter -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LJZRVKZ8VR"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'G-LJZRVKZ8VR');
-	</script>
-	<!-- /Google Analytics counter -->
-
-	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript">
-		(function (m, e, t, r, i, k, a) {
-			m[i] = m[i] || function () {
-				(m[i].a = m[i].a || []).push(arguments)
-			};
-			m[i].l = 1 * new Date();
-			k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k,
-				a)
-		})
-		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-		ym(86450840, "init", {
-			clickmap: true,
-			trackLinks: true,
-			accurateTrackBounce: true,
-			webvisor: true
-		});
-	</script>
-
-	<noscript>
-		<div><img src="https://mc.yandex.ru/watch/86450840" style="position:absolute; left:-9999px;" alt="" /></div>
-	</noscript>
-	<!-- /Yandex.Metrika counter -->
+	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
@@ -60,10 +21,10 @@
 			<!-- page header -->
 			<header class="page-header">
 				<div class="page-header__container container">
-					<a href="/experiments.html" class="page-header__link-check uppercase">эксперименты</a>
+					<a href="./experiments.html" class="page-header__link-check uppercase">эксперименты</a>
 
-					<a href="/index.html" class="page-header__logo">
-						<img src="/img/site-logo.svg" alt="логотип сайта">
+					<a href="./index.html" class="page-header__logo">
+						<img src="./img/site-logo.svg" alt="логотип сайта">
 					</a>
 
 					<div class="page-header__menu">
@@ -78,8 +39,8 @@
 									<a href="#page-physics-expert-opinion-title" class="menu__link">мнение эксперта</a>
 								</li>
 								<li><a href="#page-output-title" class="menu__link">вывод</a></li>
-								<li><a href="/contacts.html" class="menu__link">контакты</a></li>
-								<li><a href="/materials.html" class="menu__link">материалы</a></li>
+								<li><a href="./contacts.html" class="menu__link">контакты</a></li>
+								<li><a href="./materials.html" class="menu__link">материалы</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -88,7 +49,7 @@
 
 			<!-- page main block -->
 			<section class="page-main-block">
-				<img class="page-main-block__title" src="/img/main-block-title.svg" alt="что выбрать?">
+				<img class="page-main-block__title" src="./img/main-block-title.svg" alt="что выбрать?">
 
 				<div class="page-main-block__btn-wrap">
 					<span class="page-main-block__sponsor uppercase">frintest production</span>
