--- a/materials.html
+++ b/materials.html
@@ -7,49 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#ff683f">
 	<title>Материалы</title>
-	<link rel="icon" href="/img/favicon.svg" sizes="any" type="image/svg+xml">
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="stylesheet" href="/css/media.css">
-
-	<!-- Google Analytics counter -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LJZRVKZ8VR"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'G-LJZRVKZ8VR');
-	</script>
-	<!-- /Google Analytics counter -->
-
-	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript">
-		(function (m, e, t, r, i, k, a) {
-			m[i] = m[i] || function () {
-				(m[i].a = m[i].a || []).push(arguments)
-			};
-			m[i].l = 1 * new Date();
-			k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k,
-				a)
-		})
-		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-		ym(86450840, "init", {
-			clickmap: true,
-			trackLinks: true,
-			accurateTrackBounce: true,
-			webvisor: true
-		});
-	</script>
-
-	<noscript>
-		<div><img src="https://mc.yandex.ru/watch/86450840" style="position:absolute; left:-9999px;" alt="" /></div>
-	</noscript>
-	<!-- /Yandex.Metrika counter -->
+	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
@@ -57,10 +18,10 @@
 		<!-- page header -->
 		<header class="page-header">
 			<div class="page-header__container container">
-				<a href="/index.html" class="page-header__link-check uppercase">главная</a>
+				<a href="./index.html" class="page-header__link-check uppercase">главная</a>
 
-				<a href="/index.html" class="page-header__logo">
-					<img src="/img/site-logo.svg" alt="логотип сайта">
+				<a href="./index.html" class="page-header__logo">
+					<img src="./img/site-logo.svg" alt="логотип сайта">
 				</a>
 
 				<div class="page-header__menu">
@@ -70,9 +31,9 @@
 
 					<nav class="menu__body">
 						<ul class="menu__list uppercase">
-							<li><a href="/index.html" class="menu__link">главная</a></li>
-							<li><a href="/experiments.html" class="menu__link">эксперименты</a></li>
-							<li><a href="/contacts.html" class="menu__link">контакты</a></li>
+							<li><a href="./index.html" class="menu__link">главная</a></li>
+							<li><a href="./experiments.html" class="menu__link">эксперименты</a></li>
+							<li><a href="./contacts.html" class="menu__link">контакты</a></li>
 						</ul>
 					</nav>
 				</div>
