--- a/contacts.html
+++ b/contacts.html
@@ -143,7 +143,7 @@
 		</footer>
 	</div>
 
-	<script src="/js/app.js" type="module"></script>
+	<script src="./js/app.js" type="module"></script>
 </body>
 
 </html>
