--- a/experiments.html
+++ b/experiments.html
@@ -149,5 +149,5 @@
 		</footer>
 	</div>
 
-	<script src="/js/app.js" type="module"></script>
+	<script src="./js/app.js" type="module"></script>
 </body>
