--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 		</footer>
 	</div>
 
-	<script src="/js/app.js" type="module"></script>
-	<script src="/js/model.js" type="module"></script>
+	<script src="./js/app.js" type="module"></script>
+	<script src="./js/model.js" type="module"></script>
 </body>
 
 </html>
