--- a/materials.html
+++ b/materials.html
@@ -172,5 +172,5 @@
 		</footer>
 	</div>
 
-	<script src="/js/app.js" type="module"></script>
+	<script src="./js/app.js" type="module"></script>
 </body>
