--- a/materials.html
+++ b/materials.html
@@ -60,8 +60,8 @@
 								</li>
 
 								<li class="page-materials__item">
-									<a href="" class="page-materials__link target"
-										aria-label="видео про классическу физику">видео
+									<a href="https://www.youtube.com/watch?v=nr8XJeew6X4&list=PLvtJKssE5Nrh_hup5VFilNvUXbppF_8Oq"
+										class="page-materials__link target" aria-label="видео про классическу физику">видео
 										про классическу физику</a>
 								</li>
 
@@ -84,7 +84,7 @@
 								<li class="page-materials__item">
 									<a href="https://hi-news.ru/science/pyat-kvantovyx-eksperimentov-demonstriruyushhix-illyuzornost-realnosti.html"
 										class="page-materials__link target" aria-label="квантовые ксперименты">квантовые
-										ксперименты</a>
+										эксперименты</a>
 								</li>
 							</ul>
 						</div>
