--- a/experiments.html
+++ b/experiments.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#ff683f">
+	<meta name="keywords" content="физика, классическая, квантовая">
+	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
 	<title>Квантовые эксперименты</title>
 	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
 	<link rel="stylesheet" href="./css/reset.css">
