--- a/experiments.html
+++ b/experiments.html
@@ -57,14 +57,14 @@
 						<li class="page-experiments__item" data-id="electron-diffraction">
 							<div class="page-experiments__offer">
 								<h3 class="page-experiments__title">дифракция</br> электронов</h3>
-								<p class="page-experiments__sub-title">и жив и мертв</p>
+								<p class="page-experiments__sub-title">и тут и там</p>
 							</div>
 						</li>
 
 						<li class="page-experiments__item" data-id="heated-fullerenes">
 							<div class="page-experiments__offer">
 								<h3 class="page-experiments__title">подогретые</br> фуллерены</h3>
-								<p class="page-experiments__sub-title">и жив и мертв</p>
+								<p class="page-experiments__sub-title">никто не видел</p>
 							</div>
 						</li>
 					</ul>
