--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 									<a href="#page-physics-expert-opinion-title" class="menu__link">мнение эксперта</a>
 								</li>
 								<li><a href="#page-output-title" class="menu__link">вывод</a></li>
+								<li><a href="./experiments.html" class="menu__link">эксперименты</a></li>
 								<li><a href="./contacts.html" class="menu__link">контакты</a></li>
 								<li><a href="./materials.html" class="menu__link">материалы</a></li>
 							</ul>
