--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,6 @@
 	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
 	<title>Контактные данные</title>
 	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
-	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/media.css">
 </head>
@@ -27,7 +26,7 @@
 				</a>
 
 				<div class="page-header__menu">
-					<div class="page-header__icon">
+					<div class="page-header__icon" aria-label="меню">
 						<span class="page-header__line"></span>
 					</div>
 
@@ -117,26 +116,25 @@
 					<div class="page-footer__icons">
 						<a href="https://vk.com/frintest" class="page-footer__link-svg target" aria-label="vkontakte"
 							rel="noopener">
-							<svg class="page-footer__icon" width="48" height="48" viewBox="0 0 48 48" fill="none">
+							<svg class="page-footer__icon" fill="none">
 								<path fill-rule="evenodd" clip-rule="evenodd"
-									d="M3.37413 3.37413C0 6.74826 0 12.1788 0 23.04V24.96C0 35.8212 0 41.2517 3.37413 44.6259C6.74826 48 12.1788 48 23.04 48H24.96C35.8212 48 41.2517 48 44.6259 44.6259C48 41.2517 48 35.8212 48 24.96V23.04C48 12.1788 48 6.74826 44.6259 3.37413C41.2517 0 35.8212 0 24.96 0H23.04C12.1788 0 6.74826 0 3.37413 3.37413ZM8.10012 14.6001C8.36012 27.0801 14.6001 34.5801 25.5401 34.5801H26.1602V27.4401C30.1802 27.8401 33.22 30.7801 34.44 34.5801H40.1201C38.5601 28.9001 34.4599 25.7601 31.8999 24.5601C34.4599 23.0801 38.0599 19.4801 38.9199 14.6001H33.7598C32.6398 18.5601 29.3202 22.1601 26.1602 22.5001V14.6001H21V28.4401C17.8 27.6401 13.7601 23.7601 13.5801 14.6001H8.10012Z"
-									fill="#fff" />
+									d="M7.8 7.8C5 10.64 5 15.15 5 24.2v1.6c0 9.05 0 13.58 2.8 16.4C10.64 45 15.15 45 24.2 45h1.6c9.05 0 13.58 0 16.4-2.8C45 39.36 45 34.85 45 25.8v-1.6c0-9.05 0-13.58-2.8-16.4C39.36 5 34.85 5 25.8 5h-1.6C15.15 5 10.62 5 7.8 7.8Zm3.95 9.37c.22 10.4 5.42 16.65 14.53 16.65h.52v-5.95c3.35.33 5.88 2.78 6.9 5.95h4.73a13.16 13.16 0 0 0-6.85-8.35 12.7 12.7 0 0 0 5.85-8.3h-4.3c-.93 3.3-3.7 6.3-6.33 6.58v-6.58h-4.3V28.7c-2.67-.67-6.03-3.9-6.18-11.53h-4.57Z" />
 							</svg>
 						</a>
 
 						<a href="https://t.me/frintest" class="page-footer__link-svg target" aria-label="telegram"
 							rel="noopener">
-							<svg class="page-footer__icon" viewBox="0 0 496 512">
-								<path fill="#fff"
-									d="M248 8a248 248 0 1 0 248 248C496 119.9 384.1 8 248 8zm114.1 168.7c-3.7 39.2-19.9 134.4-28.1 178.3-3.5 18.6-10.3 24.8-17 25.4-14.3 1.3-25.3-9.5-39.2-18.6-21.9-14.4-34.2-23.3-55.4-37.2-24.5-16.2-8.6-25 5.4-39.5 3.6-3.8 67-61.5 68.3-66.8.1-.6.3-3-1.2-4.4s-3.6-.8-5.1-.5q-3.3.8-104.6 69.2-14.9 10.2-26.9 10c-8.9-.3-25.9-5-38.5-9.2-15.6-5-28-7.7-26.8-16.3q.8-6.7 18.4-13.7 108.4-47.2 144.6-62.3c68.9-28.6 83.2-33.6 92.5-33.8 2 0 6.7.5 9.6 2.9a10.4 10.4 0 0 1 3.6 6.7 43.8 43.8 0 0 1 .4 9.8z" />
+							<svg class="page-footer__icon" fill="none">
+								<path
+									d="M25 5a20 20 0 1 0 20 20c0-10.98-9.02-20-20-20Zm9.2 13.6a235.8 235.8 0 0 1-2.26 14.38c-.29 1.5-.84 2-1.38 2.05-1.15.1-2.04-.76-3.16-1.5-1.76-1.16-2.75-1.88-4.46-3-1.98-1.3-.7-2.01.43-3.18.3-.31 5.4-4.96 5.5-5.39.02-.05.03-.24-.09-.36-.12-.1-.29-.06-.4-.04-.19.05-3 1.9-8.44 5.59-.8.54-1.53.81-2.17.8a14.3 14.3 0 0 1-3.1-.74c-1.27-.4-2.27-.62-2.17-1.31.04-.37.54-.73 1.48-1.11 5.83-2.54 9.72-4.21 11.67-5.02 5.55-2.31 6.7-2.71 7.45-2.73.17 0 .55.04.78.23.16.14.26.33.29.54.04.27.05.53.03.8Z" />
 							</svg>
 						</a>
 
 						<a href="https://github.com/AlcestHub" class="page-footer__link-svg target" aria-label="github"
 							rel="noopener">
-							<svg class="page-footer__icon" viewBox="0 0 496 512">
-								<path fill="#fff"
-									d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252a250.7 250.7 0 0 0 169.5 239.2c12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9a94.5 94.5 0 0 1 2.6-67.9c20.9-6.5 69 27 69 27a235 235 0 0 1 125.6 0s48.1-33.6 69-27a94.4 94.4 0 0 1 2.6 67.9c16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
+							<svg class="page-footer__icon" fill="none">
+								<path
+									d="M17.72 37.2c0 .17-.19.3-.43.3-.27.03-.46-.1-.46-.3 0-.16.19-.29.43-.29.25-.02.46.1.46.3Zm-2.57-.36c-.06.16.1.35.36.4.21.08.46 0 .5-.16.06-.17-.1-.36-.35-.43-.21-.06-.45.02-.51.19Zm3.66-.14c-.24.05-.41.21-.39.4.03.17.24.27.5.22.23-.06.4-.22.37-.38-.02-.16-.24-.27-.48-.24ZM24.25 5C12.78 5 4 13.71 4 25.18c0 9.17 5.77 17.02 14.02 19.79 1.06.19 1.43-.47 1.43-1l-.02-5.08s-5.8 1.24-7.01-2.47c0 0-.94-2.4-2.3-3.03 0 0-1.9-1.3.13-1.27 0 0 2.06.17 3.2 2.14 1.8 3.19 4.84 2.27 6.03 1.72a4.6 4.6 0 0 1 1.32-2.78c-4.62-.52-9.29-1.19-9.29-9.14 0-2.28.63-3.42 1.95-4.87a7.82 7.82 0 0 1 .22-5.62c1.73-.54 5.7 2.23 5.7 2.23a19.43 19.43 0 0 1 10.4 0s3.97-2.78 5.7-2.23a7.81 7.81 0 0 1 .22 5.62c1.32 1.46 2.13 2.6 2.13 4.87 0 7.98-4.87 8.62-9.5 9.14.76.65 1.41 1.89 1.41 3.83l-.02 6.92c0 .54.38 1.19 1.43 1 8.27-2.75 13.88-10.6 13.88-19.77C45.02 13.71 35.71 5 24.24 5ZM12.04 33.53c-.1.08-.08.27.06.43.13.13.32.19.43.08.1-.08.08-.27-.06-.43-.13-.13-.32-.19-.43-.08Zm-.9-.67c-.05.1.03.24.2.32.13.08.3.06.35-.06.06-.1-.02-.24-.19-.32-.16-.05-.3-.03-.35.06Zm2.69 2.94c-.14.1-.09.36.1.51.2.2.43.22.54.09.1-.11.06-.36-.1-.52-.19-.19-.44-.21-.54-.08Zm-.95-1.21c-.13.08-.13.3 0 .48.14.2.36.28.47.2.13-.11.13-.33 0-.52-.12-.19-.33-.27-.47-.16Z" />
 							</svg>
 						</a>
 					</div>
