--- a/contacts.html
+++ b/contacts.html
@@ -70,7 +70,8 @@
 					</form>
 
 					<iframe class="page-contact__google-map"
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1462.663664872863!2d45.15782889222763!3d53.20226947628447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4141a9780b0d5f85%3A0x8f35e9fe0d171aa2!2z0JzQkdCe0KMg0KHQntCoIDIyMg!5e0!3m2!1sru!2sru!4v1636553076336!5m2!1sru!2sru"></iframe>
+						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2390.045566511273!2d45.1630102!3d53.199099!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4141a9eadfacfd2f%3A0x3adb75c7210c8a98!2z0KbQtdC90YLRgCDQtNC10YLRgdC60L7Qs9C-INGC0LXRhdC90LjRh9C10YHQutC-0LPQviDRgtCy0L7RgNGH0LXRgdGC0LLQsA!5e0!3m2!1sru!2sru!4v1637309442497!5m2!1sru!2sru"
+						loading="lazy"></iframe>
 				</div>
 			</section>
 		</main>
