2s1f - add glsl animation

--- a/src/public/experiments/experiments.html
+++ b/src/public/experiments/experiments.html
@@ -45,24 +45,15 @@
 				<div class="page-experiments__container container">
 					<ul class="page-experiments__list uppercase">
 						<li class="page-experiments__item" data-id="shroedinger-cat">
-							<div class="page-experiments__offer">
-								<h3 class="page-experiments__title">кот</br> шредингера</h3>
-								<p class="page-experiments__sub-title">и жив и мертв</p>
-							</div>
+							<canvas class="webgl" data-id="shroedinger-cat"></canvas>
 						</li>
 
 						<li class="page-experiments__item" data-id="electron-diffraction">
-							<div class="page-experiments__offer">
-								<h3 class="page-experiments__title">дифракция</br> электронов</h3>
-								<p class="page-experiments__sub-title">и тут и там</p>
-							</div>
+							<canvas class="webgl" data-id="electron-diffraction"></canvas>
 						</li>
 
 						<li class="page-experiments__item" data-id="heated-fullerenes">
-							<div class="page-experiments__offer">
-								<h3 class="page-experiments__title">подогретые</br> фуллерены</h3>
-								<p class="page-experiments__sub-title">никто не видел</p>
-							</div>
+							<canvas class="webgl" data-id="heated-fullerenes"></canvas>
 						</li>
 					</ul>
 				</div>
