--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,6 +10,8 @@
 	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
 	<title>Классическая физика или квантовая?</title>
 	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
+	<link rel="preload" href="./fonts/tt-norms-pro-medium.woff" as="font" crossorigin>
+	<link rel="preload" href="./fonts/tt-norms-pro-extra-bold.woff" as="font" crossorigin>
 </head>
 
 <body>
@@ -25,7 +27,7 @@
 					</a>
 
 					<div class="page-header__menu">
-						<div class="page-header__icon" aria-label="меню">
+						<div class="page-header__icon" aria-label="меню" tabindex="0">
 							<span class="page-header__line"></span>
 						</div>
 
@@ -78,7 +80,7 @@
 							</div>
 
 							<div class="page-physics__video" data-id="classic">
-								<div class="page-physics__btn" aria-label="включить видео">
+								<div class="page-physics__btn" aria-label="включить видео" tabindex="0">
 									<svg class="page-physics__svg" width="33" height="33" fill="none">
 										<path d="M0 0h33v33H0V0Z" />
 										<path d="M33 16.5 8.2 30.8V2.2L33 16.5Z" fill="#fff" />
@@ -93,7 +95,7 @@
 							</div>
 
 							<div class="page-physics__video" data-id="quantum">
-								<div class="page-physics__btn" aria-label="включить видео">
+								<div class="page-physics__btn" aria-label="включить видео" tabindex="0">
 									<svg class="page-physics__svg" width="33" height="33" fill="none">
 										<path d="M0 0h33v33H0V0Z" />
 										<path d="M33 16.5 8.2 30.8V2.2L33 16.5Z" fill="#fff" />
@@ -177,7 +179,7 @@
 					<p class="page-expert-opinion__sub-title sub-title">Дмитрий Побединский</p>
 
 					<div class="page-expert-opinion__player">
-						<div class="page-expert-opinion__btn" aria-label="включить аудио">
+						<div class="page-expert-opinion__btn" aria-label="включить аудио" tabindex="0">
 							<svg class="page-expert-opinion__play" width="33" height="33" fill="none">
 								<path d="M0 0h33v33H0V0Z" />
 								<path d="M33 16.5 8.2 30.8V2.2L33 16.5Z" fill="#222" />
