--- a/src/public/materials/materials.html
+++ b/src/public/materials/materials.html
@@ -10,6 +10,8 @@
 	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
 	<title>Материалы</title>
 	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
+	<link rel="preload" href="./fonts/tt-norms-pro-medium.woff" as="font" crossorigin>
+	<link rel="preload" href="./fonts/tt-norms-pro-extra-bold.woff" as="font" crossorigin>
 </head>
 
 <body>
@@ -24,7 +26,7 @@
 				</a>
 
 				<div class="page-header__menu">
-					<div class="page-header__icon" aria-label="меню">
+					<div class="page-header__icon" aria-label="меню"  tabindex="0">
 						<span class="page-header__line"></span>
 					</div>
 
