--- a/src/public/index.html
+++ b/src/public/index.html
@@ -234,7 +234,7 @@
 
 						<li class="page-footer__item">
 							<p class="page-footer__title">название конкурса</p>
-							<p class="page-footer__sub-title">сделай сайт своими руками</p>
+							<p class="page-footer__sub-title">ЮНОСТЬ</p>
 						</li>
 
 						<li class="page-footer__item">
