--- a/src/public/index.html
+++ b/src/public/index.html
@@ -34,9 +34,6 @@
 						<nav class="menu__body">
 							<ul class="menu__list uppercase">
 								<li><a href="#page-physics-title" class="menu__link">физика</a></li>
-								<li>
-									<a href="#page-physics-expert-opinion-title" class="menu__link">мнение эксперта</a>
-								</li>
 								<li><a href="#page-output-title" class="menu__link">вывод</a></li>
 								<li><a href="./experiments.html" class="menu__link">эксперименты</a></li>
 								<li><a href="./contacts.html" class="menu__link">контакты</a></li>
@@ -172,7 +169,7 @@
 			</section>
 
 			<!-- page expert opinion -->
-			<section class="page-expert-opinion section">
+			<!-- <section class="page-expert-opinion section">
 				<div class="page-expert-opinion__container container">
 					<h2 class="title uppercase" id="page-physics-expert-opinion-title">мнение эксперта</h2>
 
@@ -196,7 +193,7 @@
 						</label>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- page output -->
 			<section class="page-output section">
